# arete

./: .gitignore  Cargo.toml  README.md  config.toml.template
sample_files/invalid/: blank_reference_answer.txt  blank_reference_answer.yaml  blank_source.txt  blank_source.yaml  missing_field.txt  missing_field.yaml  missing_reference_answer.txt  missing_reference_answer.yaml  missing_source.txt  missing_source.yaml  only_tag.txt  only_tag.yaml  second_missing_source.txt  second_missing_source.yaml
sample_files/valid/: indentation_preserved.yaml  multi_line_inputs.txt  multi_line_inputs.yaml  thinking_like_a_programmer.txt  thinking_like_a_programmer.yaml
src/: horizontal_menu.rs  lib.rs  main.rs  review_session.rs
